Fix some spacing and camel case.

--- a/app/static/styles/_variables.scss
+++ b/app/static/styles/_variables.scss
@@ -15,7 +15,8 @@ $bodyFontFamily: "Yanone Kaffeesatz",
                  Arial,
                  "Lucida Grande",
                  sans-serif;
-$fontcolor: #ffffff;
+
+$fontColor: #ffffff;
 $fontSize: 20px;
 
 $bkgd: #000000;
